// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageNotFound renders a 404 page 1`] = `
Array [
  <div
    className="hero"
    style={
      Object {
        "backgroundImage": "url(https://i.giphy.com/media/sMABNWsUWPC1y/giphy.gif)",
      }
    }
  >
    <div
      className="d-flex justify-content-center color-wash"
    >
      <h1
        className="mt-5 display-3 text-white"
      >
        Oops... 404
      </h1>
    </div>
  </div>,
  " ",
]
`;

exports[`PageNotFound renders a 404 page 2`] = `
<div
  className="hero"
  style={
    Object {
      "backgroundImage": "url(myimage.jpg)",
    }
  }
>
  <div
    className="d-flex justify-content-center color-wash"
  >
    <h1
      className="mt-5 display-3 text-white"
    >
      Oops... 404
    </h1>
  </div>
</div>
`;
